Run on custom JRE
Blockcluster now uses a custom alpine image that only includes non-JDK java modules, except for few modules that are necessary to run the minecraft server or for authentication requests.

Reduces the images size from 480 MB to around 220 MB.